--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,16 @@ jobs:
       - python/install-deps
       - python/save-cache
       - run:
-          command: ./manage.py test
-          name: Test
-
+          name: Install dev dependencies
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            make install-dev
+      - run:
+          name: run tests
+          command: |
+            . venv/bin/activate
+            make test-unit
 workflows:
   main:
     jobs:
