--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,14 @@
 version: 2.1
 
-orbs:
-  python: circleci/python@0.2.1
-
 jobs:
-  build-and-test:
-    executor: python/default
+  build:
+    docker:
+      - image: circleci/python:3.7
+
+    working_directory: ~/repo
+
     steps:
       - checkout
-      - python/load-cache
-      - python/install-deps
-      - python/save-cache
       - run:
           name: Install dev dependencies
           command: |
@@ -21,8 +19,8 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            make test-unit
+            make test
 workflows:
   main:
     jobs:
-      - build-and-test
+      - build 
