--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
             . venv/bin/activate
             make test
 
-    deploy_to_docker_hub:
+    upload_docker:
         docker:
           - image: circleci/buildpack-deps:stretch
         steps:
@@ -30,18 +30,23 @@ jobs:
           - run:
               name: Create Docker Image
               command: |
-                docker build -t $DOCKERHUB_USERNAME/microblog -f docker/Dockerfile.prod .
+                docker build -t $DOCKERHUB_USERNAME/microblog -f docker/Dockerfile_prod .
           - run:
               name: Publish Docker Image to Docker Hub
               command: |
                 echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
                 docker push $DOCKERHUB_USERNAME/microblog:latest
 workflows:
-  main:
+  version: 2
+  build-master:
     jobs:
-      - build
-  - deploy_to_docker_hub:
-    filters:
-      branches:
-        only:
-          - master
+      - build:
+          filters:
+            branches:
+              only: master
+      - upload_docker:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
